# QueryEngine

./: .env.example  .eslintrc.json  .gitignore  COMPLETION_REPORT.md  DATABASE_CONFIGURATION.md  FRONTEND_IMPROVEMENTS.md  GUARDRAILS.md  PRD.md  README.md  SECURITY_AND_PERFORMANCE_FIXES.md  test_pipeline.py
.claude/: settings.local.json
.husky/: pre-commit
backend/: .env.example  config.py  constants.py  main.py  pyproject.toml  requirements.txt
backend/api/: middleware.py  routes.py
backend/models/: db_models.py  schemas.py
backend/services/: agent.py  database.py  llm_service.py  sanitizer.py  seed_data.py
backend/tests/: conftest.py  test_sanitizer.py
backend/utils/: errors.py  logger.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: HomePage.tsx  ResultsPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
